<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--
     Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
     It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
     or something similar.
    -->
    <string name="app_name">VU Weather</string>
    <!--
     By convention, "action" denotes that this String will be used as the label for an Action,
     typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_about">About</string>
    <string name="mif_linkas">http://mif.vu.lt/en2/</string>
    <string name="vu_linkas">http://www.vu.lt/en</string>
    <string name="apie_tekstas">Application was developed by Vilnius University students of Mathematics and Informatics faculty:</string>
    <string name="title_activity_VUabout">VU MS Info</string>
    <string name="title_activity_stoties">About VU Meteorological Station</string>
    <string name="stotis">Weather station</string>
    <string name="apie_stoti">This modern weather station is operated by Vilnius University. Station equipment is manufactured by Coastal Environmental Systems and Kipp &#38; Zonen.</string>
    <string name="koord">Location:\n54° 40′ 58.39″ N\n25° 15′ 38.23″ E</string>
    <string name="AVJL">128 m. above sea level (ASL)</string>
    <string name="adres">Address:\nM. K. Čiurlionio st. 21/27, Vilnius, LT 03101</string>
    <string name="moreinf">More information</string>
    <string name="istotilink">http://www.hkk.gf.vu.lt/?page_id=687</string>
    <!-- Label fir the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key">location</string>
    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default">Vilnius</string>
    <!-- false reiskia kad nebus translate -->
    <string name="action_map">Map location</string>
    <string name="title_activity_vudata">VU MS DATA</string>

    <string name="action_fresh">Refresh</string>
    <string name="title_activity_my_new_main">MyNewMain</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="title_activity_no_internet">NoInternet</string>

    <string name="title_activity_vudatapaaiskinimai">More data with explanations</string>
    <string name="title_activity_meteo">meteoActivity</string>
    <string name="title_activity_meteo_fragment">meteoFragment</string>

    <string name="daugiau">Details</string>
    <string name="nerarysio">No Internet Connection Availabe</string>
    <string name="ispejimasinterneto">WARNING</string>
    <string name="wireless">WIRELESS SETTINGS</string>
    <!--<string name="notifikacija">Information about the weather in Vilnius</string>-->
    <string name="notifikacija">Click here to see the latest weather report</string>
    <string name="meteoatnaujinta">Weather forecast provided by meteo.lt. Updated </string>
    <string name="meteoatnaujintapries">Weather forecast provided by meteo.lt. Updated </string>
    <string name="meteoatnaujintaday">yesterday</string>
    <string name="meteoatnaujintasiandien">Weather forecast provided by meteo.lt. Updated today</string>
    <string name="meteoatnaujintadays">days ago </string>
    <string name="meteoatnaujintatoday">today </string>
    <string name="temperatura">Temperature: </string>
    <string name="vejogreitis">Wind speed: </string>
    <string name="debesuotumas">Cloudiness: </string>
    <string name="slegis">Pressure: </string>
    <string name="krituliai">Precipation: </string>
    <string name="giedra">Clear</string>
    <string name="mazaidebesuota">Mostly clear</string>
    <string name="debesuotasupragiedruliais">Partly Sunny</string>
    <string name="debesuota">Cloudy</string>
    <string name="protarpiaislietus">Intermittent rain</string>
    <string name="silpnaslietus">Light rain</string>
    <string name="lietus">Rain</string>
    <string name="smarkuslietus">Heavy rain</string>
    <string name="krusa">Hail</string>
    <string name="slapdriba">Sleet</string>
    <string name="perkunija">Thunderstorm</string>
    <string name="trumpaslietussuperkunija">Short rain with thunder</string>
    <string name="lietussuperkunija">Rain and thunder</string>
    <string name="trumpalaikissnygis">Brief snow</string>
    <string name="protarpiaissniegas">Intermittent snow</string>
    <string name="silpnassnygis">Light snow</string>
    <string name="snygis">Snow</string>
    <string name="smarkussnygis">Heavy snow</string>
    <string name="Rūkas">Fog</string>
    <string name="lijundra">Freezing rain</string>
    <string name="plikledis">Glazed frost</string>
    <string name="trumpalaikislietus">Short rain</string>
    <string name="siandien">Today: </string>
    <string name="ryt">Tomorrow: </string>
    <string name="alpha">(In Alphabetical Order)\nIndrė Cibulskaitė - Style\nMartynas Raila - Programming\nPaulius Taujanskas - Lead Programming\n \nLaimonas Januška - Scientific Worker\nSimonas Kareiva - Executive Lecturer </string>
    <string name="tiesiogvums">Live data from Vilnius University. Updated </string>
    <string name="tiesiogvumspa">Live data from Vilnius University. Updated </string>
    <string name="tiesiogvumsmin"> min. ago</string>
    <string name="tiesiogvumsh"> hrs. ago</string>
    <string name="tiesiogvumsday"> yesterday</string>
    <string name="tiesiogvumsdays"> days ago</string>
    <string name="migla">Mist </string>
    <string name="migla1km">Mist, visibility less than 1 km</string>
    <string name="silpnadulksna">Light Drizzle</string>
    <string name="vidutinedulksna">Average Drizzle</string>
    <string name="stipridulksna">Strong Drizzle</string>
    <string name="vidutinislietus">Moderate Rain</string>
    <string name="stipruslietus">Heavy Rain</string>
    <string name="vidutinissnygis">Average Snow</string>
    <string name="stiprussnygis">Heavy Snow</string>
    <string name="liutiniaikrituliai">Rainfall</string>
    <string name="dekojame">Special thanks to: Laimonas Januška and Simonas Kareiva</string>
    <string name="temperaturapa">Temperature - indicator describing the warmth of the air mass this is the most perceptible meteorological indicator for human body. Air temperature is measured in 2 m. height, sensor is placed in a special cage, shielding thermometer from direct sunlight, wind and precipitation.</string>
    <string name="santykinisorodregnispa">Relative humidity - the ratio between the mass of water steam in the air and maximum steam quantity in that. The higher the temperature, the more water steam can be in the air. As temperature rises the air becomes drier, when the temperature is falling - a relative humidity of the water rises, until the air becomes saturated water steam (> 98%) - if temperature keeps falling down, water steam in the air begins to condensate the mass - this produces a mist (near the ground) and the clouds (in the higher layers of the atmosphere). Humidity nd temperature sensors are integrated 2 m. above the ground.</string>
    <string name="atmosferosslegistotieslygyjepa">The pressure of an atmosphere is a weight of air mass’ pole which is above the locality. An average pressure of atmosphere at the sea level is 1013,25 hPa, meaning that air is pressing the surface with a 1,013 kg/cm2 force. Because of the difference of pressures in the space, the movement of air masses in respect of surface is ascending, also known as wind. Also some of the phenomenons can be recognized by the change of a pressure, for example when a cyclone is approaching it usually brings rain, clouds and intense wind; heat in the winter and chilly weather in the summer, and the pressure decreases rapidly. And when an anticyclone is approaching  which usually brings calm, cloudless weather; cold in the winter and heat in the summer, the pressure ascends rapidly.</string>
    <string name="krituliukiekiosumapereinamaparapa">Rainfall during the day - amount of percipation from midnight, showing how thick the water layer on one square meter of the area is.</string>
    <string name="vejogreitispa">Wind speed - the distance that a volume f air traveled per unit of time, usually expressed in meters per second. Wind speed in VU MS is measured by acoustic anemometer which is located 10 meters above the ground.</string>
    <string name="vejokryptis">Wind direction – direction from which wind originates. </string>
    <string name="vejogusiostiprumaspa">Wind gust – sudden and strong wind speed increases.</string>
    <string name="debesupadoaukstispa">The height of cloud ceiling - the distance between the ground and lower limit of the cloud, it is measured by the laser. The maximum height that VU MS can capture is 7500 m.</string>
    <string name="horizontalusmatomumaspa">Horizontal visibility - also known as the meteorological visibility. It indicates the distance at which an object will merge with the background. Visibility is limited by water steam in the atmosphere, solid particles or by falling precipitation.</string>
    <string name="easmuorosalygukodaspa">Weather conditions - according to the meteorological visibility, precipitation,ambient temperature, as well as their shape and speed weather detector at VU MS can detect the mist, fog, and various precipitations - drizzle, rain, rainstorm or snow and their intensity.</string>

    <string name="vejokryptisx">Wind direction</string>
    <string name="santykinisdregnis">Relative humidity</string>
    <string name="horizontalusmatomumas">Horizontal visibility</string>
    <string name="debesupadoaukstis">Height of the cloud ceiling</string>
    <string name="vejogusiai">Wind gust</string>
    <string name="siaures">North</string>
    <string name="siauresrytu">North East</string>
    <string name="rytu">South</string>
    <string name="pietryciu">South East</string>
    <string name="pietu">East</string>
    <string name="pietvakariu">South West</string>
    <string name="vakaru">West</string>
    <string name="siauresvakaru">North West</string>
    <string name="orokodas">Current weather code</string>
    <string name="rukana">Fog</string>
    <string name="krituliaibe">Precipation</string>
</resources>