<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/daugiau">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/reiksme1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/temperaturapa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/santykinisorodregnispa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/atmosferosslegistotieslygyjepa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/krituliukiekiosumapereinamaparapa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vejogreitispa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vejokryptis" >
            </TextView>
            <TextView
                android:id="@+id/reiksme7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vejogusiostiprumaspa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/debesupadoaukstispa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/horizontalusmatomumaspa" >
            </TextView>
            <TextView
                android:id="@+id/reiksme10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="text"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/easmuorosalygukodaspa" >
            </TextView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>